update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -5,6 +5,7 @@ xpra (6.1.2-1) UNRELEASED; urgency=low
     avoid `dnf` v5
   * Major:
     system tray docking causing server crashes
+    system tray not updated
     client errors out with window forwarding disabled, remove more assumptions
     OpenGL probe results were being ignored
     shape client errors with desktop scaling
@@ -14,16 +15,19 @@ xpra (6.1.2-1) UNRELEASED; urgency=low
     clipboard `INCR` transfers get stuck
     `keyboard-sync` switch not honoured
     connection drops when downscaling
-    system tray not updated
+    server-side window state not synchronized
+    detection of display state
   * Minor:
     `dev-env` subcommand fails on Debian
     always set a default initial resolution
     system tray setup failures with non-composited screens, ie: 8-bit displays
     system tray paint failures with `mmap`
-   map missing modifiers using defaults
+    map missing modifiers using defaults
+    don't setup ssh agent dispatch when ssh is disabled
   * Encodings:
     sub-optimal non-scroll areas
     prettier sampling filter when downscaling
+    NVidia driver version check never fails
   * OpenGL:
     window scaling corruption
     desktop scaling miscalculations and corruption
@@ -36,7 +40,7 @@ xpra (6.1.2-1) UNRELEASED; urgency=low
     skip scary warning without compression
     log full backtraces with X11 context errors
 
- -- Antoine Martin <antoine@xpra.org>  Fri, 23 Aug 2024 12:14:48 +0700
+ -- Antoine Martin <antoine@xpra.org>  Sun, 25 Aug 2024 16:27:53 +0700
 
 xpra (6.1.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
