--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.1.3-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Tue, 03 Sep 2024 15:59:20 +0700
+
 xpra (6.1.2-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     pyopengl build fix for Fedora 41 + force rebuild
