--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -15,6 +15,7 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - pycuda 2024.1.2
    - pycuda RPMs to link against the system boost library
    - build fix for ffmpeg v7 decoder and csc module
+   - build CUDA kernels with clang++ instead of gcc >= 14
   * Major:
    - system tray docking causing server crashes
    - MS Windows PDF printing crash, library mismatch
@@ -28,10 +29,14 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - client errors out with window forwarding disabled, remove more assumptions
    - xshape client errors with desktop scaling
    - xshape windows should still honour the window border
+   - expose all clipboard targets
    - clipboard `INCR` transfers get stuck
    - `scroll` paint corruption
    - connection drops when downscaling
+   - authentication aborted due to encryption not detected
    - always set a default initial resolution
+   - honour the initial resolution, even if resizing is disabled
+   - failure to add new virtual monitors
   * Encodings:
    - `mmap` race condition
    - validate openh264 colorspace
@@ -41,6 +46,8 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - stick to the same video scaling value longer
    - sub-optimal non-scroll areas
    - prettier sampling filter when downscaling
+   - nvenc causing decoding errors: openh264 decoder and ffmpeg decoder
+   - workaround nvenc padded frames
   * Keyboard:
    - `keyboard-sync` switch not honoured
    - ignore MS Windows keyboard layouts without a valid X11 layout name
@@ -58,6 +65,7 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - system tray setup failures with non-composited screens, ie: 8-bit displays
    - map missing modifiers using defaults
    - don't setup ssh agent dispatch when ssh is disabled
+   - request mode failures
   * Cosmetic:
    - errors when connections are closed as we process them
    - try to prevent ATK warnings
@@ -75,8 +83,10 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - missing quote
    - log opengl probe command
    - clarify display name message
+   - support the same resolution aliases as newer versions
+   - log randr error code
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 25 Aug 2024 18:53:26 +0700
+ -- Antoine Martin <antoine@xpra.org>  Wed, 04 Aug 2024 18:28:32 +0700
 
 xpra (5.0.9-1) UNRELEASED; urgency=low
   * Encodings:
