update the release notes

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.9 (2024-08-23)
+v3.1.9 (2024-09-04)
 	-- build and packaging:
 		- libyuv 0.1878.20231004
 		- packaging updates for CentOS7: libyuv, skip pycuda
@@ -9,6 +9,7 @@ v3.1.9 (2024-08-23)
 	-- encodings:
 		- avoid slow modules (ie: csc_cython)
 		- stick to the same video scaling setting longer, avoid big swings
+		- handle decoding of padded frames
 	-- major:
 		- system tray cleanup crash
 		- missing start menu
@@ -22,6 +23,9 @@ v3.1.9 (2024-08-23)
 		- audio failures with 'auto' sink
 		- metadata ignored
 		- system tray errors on displays without compositing
+		- ignore framerate when parsing vfb resolutions
+		- expose all clipboard targets
+		- authentication aborted due to encryption not detected
 	-- minor and cosmetic fixes:
 		- map missing modifiers using defaults
 		- don't assume that zlib is available
@@ -31,6 +35,7 @@ v3.1.9 (2024-08-23)
 		- try to handle missing python pillow slightly more gracefully
 		- log opengl probe command
 		- confusing X11 display message
+		- use correct type for numlock modifier
 
 v3.1.8 (2024-06-13)
 	-- major:
