--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,5 +1,9 @@
 xpra (6.1.3-1) UNRELEASED; urgency=low
+  * Platforms, build and packaging:
+    don't bundle any Qt components
   * Major:
+    ssl failures with default certificates
+    verify ssl certificates can be accessed - not just the parent directory
     X11 display state detection
     failure to add new virtual monitors
     expose all clipboard targets
