--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,13 @@
+xpra (5.0.11-1) UNRELEASED; urgency=low
+  * Platforms, build and packaging:
+   - don't build ffmpeg encoder on MacOS
+   - RPM builds without nvidia codecs failed
+   - RPM simplify Fedora feature checks
+  * Major:
+   - verify ssl certificates can be accessed - not just the parent directory
+
+ -- Antoine Martin <antoine@xpra.org>  Sat, 14 Sep 2024 22:13:37 +0700
+
 xpra (5.0.10-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
    - syntax compatibility fixes
