#3953 add 'minimal' to man page

--- a/fs/share/man/man1/xpra.1
+++ b/fs/share/man/man1/xpra.1
@@ -427,6 +427,9 @@ Displays xpra's version number.
 \fB-h, \-\-help\fP
 Displays a summary of command line usage.
 .TP
+\fB\-\-minimal\fP
+Disables all non-essential features.
+.TP
 \fB-d\fP \fIFILTER1,FILTER2,...\fP, \fB\-\-debug\fP=\fIFILTER1,FILTER2,...\fP
 Enable debug logging.  The special value \fBall\fP enables all
 debugging.
