--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -33,6 +33,7 @@ xpra (6.1.3-1) UNRELEASED; urgency=low
     don't log `id` requests
     quic close errors with aioquic 1.2
     validate http hostname without port for ssl redirection
+    support polling pointer position
   * Cosmetic:
     support the same resolution aliases as newer versions
     handle early errors more gracefully
@@ -44,8 +45,9 @@ xpra (6.1.3-1) UNRELEASED; urgency=low
     virtual encodings misleading error message
     audio data can be inlined
     http timeout errors
+    add `minimal` to manual page
 
- -- Antoine Martin <antoine@xpra.org>  Tue, 24 Sep 2024 19:50:29 +0700
+ -- Antoine Martin <antoine@xpra.org>  Fri, 27 Sep 2024 23:11:07 +0700
 
 xpra (6.1.2-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
