--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.1.4-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Thu, 03 Oct 2024 21:58:02 +0700
+
 xpra (6.1.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     don't bundle any Qt components
