--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.3-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Sun, 13 Oct 2024 18:49:42 +0700
+
 xpra (6.2.0-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     pycuda for Fedora 41
