--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.2.1-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Sat, 19 Oct 2024 19:59:14 +0700
+
 xpra (6.2.0-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     pycuda for Fedora 41
