add latest fixes to the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -3,6 +3,7 @@ xpra (6.2.1-1) UNRELEASED; urgency=low
     paint errors with `mmap` mode
     distorted paints
   * Major:
+    OpenGL errors with MS Windows clients missing stderr
     keycode mapping for Wayland clients
     some windows not shown when there is a tray window being forwarded
     connection failures on some server platforms
