--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.2.2-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Sat, 09 Nov 2024 23:43:18 +0700
+
 xpra (6.2.1-1) UNRELEASED; urgency=low
   * System tray:
     paint errors with `mmap` mode
