--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -8,15 +8,19 @@ xpra (5.0.11-1) UNRELEASED; urgency=low
    - run CI on Ubuntu 22.04 image
    - generate SBOM for MS Windows builds
    - record which repository is targeted
+   - support providing build arguments using environment
+   - syntax errors in the MS Windows build setup script
   * Major:
    - `xpra top` corrupted output, initialization failure
+   - focus lost
+   - keycode mapping for Wayland clients
+  * Network:
    - verify ssl certificates can be accessed - not just the parent directory
    - automatic re-connection path errors with MS Windows clients
    - ssl redirection errors
-   - focus lost
    - raise maximum number of AES key stretching iterations
    - automatic port assignment error
-   - keycode mapping for Wayland clients
+   - `vsock` connection errors
   * Minor:
    - quality and speed options can be used with generic encodings
    - support pointer polling
@@ -28,7 +32,7 @@ xpra (5.0.11-1) UNRELEASED; urgency=low
    - typo in manpage
    - remove unused logger]
 
- -- Antoine Martin <antoine@xpra.org>  Mon, 11 Nov 2024 01:26:27 +0700
+ -- Antoine Martin <antoine@xpra.org>  Mon, 18 Nov 2024 20:27:03 +0700
 
 xpra (5.0.10-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
