--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -13,6 +13,8 @@ xpra (5.0.11-1) UNRELEASED; urgency=low
    - aioquic 1.2.0 build fix
    - use arch specific pkg-config for cuda, if found
    - pynvml 12.560.30
+   - pyuinput 1.0.1
+   - don't try to build ffmpeg encoder with ffmpeg >= 7
   * Major:
    - `xpra top` corrupted output, initialization failure
    - focus lost
@@ -35,7 +37,7 @@ xpra (5.0.11-1) UNRELEASED; urgency=low
    - typo in manpage
    - remove unused logger]
 
- -- Antoine Martin <antoine@xpra.org>  Tue, 19 Nov 2024 09:29:52 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 19 Nov 2024 21:04:03 +0700
 
 xpra (5.0.10-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
