update the release notes

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.9 (2024-11-19)
+v3.1.9 (2024-11-22)
 	-- build and packaging:
 		- libyuv 0.1878.20231004
 		- packaging updates for CentOS7: libyuv, skip pycuda
@@ -16,12 +16,15 @@ v3.1.9 (2024-11-19)
 		- pynvml 12.560.30
 		- pyuinput 1.0.1
 		- require clang to build the CUDA kernels, instead of GCC >= 14
+		- missing SVG loader on MS Windows
+		- pixbuf loaders cache not populated
 	-- encodings:
 		- avoid slow modules (ie: csc_cython)
 		- stick to the same video scaling setting longer, avoid big swings
 		- handle decoding of padded frames
 		- quality and speed can be used with all generic encodings
 	-- major:
+		- protect against potential buffer overflows
 		- MS Windows printing crash
 		- system tray cleanup crash
 		- automatic port assignment error
@@ -59,6 +62,7 @@ v3.1.9 (2024-11-19)
 		- confusing X11 display message
 		- avoid X11 client message format warnings
 		- use correct type for numlock modifier
+		- handle missing python-pillow more gracefully
 
 v3.1.8 (2024-06-13)
 	-- major:
