--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,4 +1,9 @@
 xpra (6.2.2-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Fri, 29 Nov 2024 20:11:13 +0700
+
+xpra (6.2.2-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     SBOM support on MS Windows
     missing SVG loader on MS Windows
