--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (5.0.12-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Fri, 29 Nov 2024 20:34:37 +0700
+
 xpra (5.0.11-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
    - don't build ffmpeg encoder on MacOS
