update the release notes

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.9 (2024-11-22)
+v3.1.9 (2024-11-29)
 	-- build and packaging:
 		- libyuv 0.1878.20231004
 		- packaging updates for CentOS7: libyuv, skip pycuda
@@ -18,11 +18,13 @@ v3.1.9 (2024-11-22)
 		- require clang to build the CUDA kernels, instead of GCC >= 14
 		- missing SVG loader on MS Windows
 		- pixbuf loaders cache not populated
+		- initial arm64 build support for MS Windows
 	-- encodings:
 		- avoid slow modules (ie: csc_cython)
 		- stick to the same video scaling setting longer, avoid big swings
 		- handle decoding of padded frames
 		- quality and speed can be used with all generic encodings
+		- clamp vrefresh to a useful range
 	-- major:
 		- protect against potential buffer overflows
 		- MS Windows printing crash
